recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:9: error: not found: type int
      spiral((steps-1):int, angle:Int, (length+3):Int, increment:Int);
                       ^